test/visibility/private/functions/accessesOther.good
accessesOther.chpl:1: In module 'OuterModule':
accessesOther.chpl:10: error: cannot access 'foo' as it is private to 'M1'
